[package]
name = "eb_win_loader"
version = "0.1.0"
edition = "2024"


[dependencies]
# Pulling the library directly from GitHub
stargate = { git = "https://github.com/Teach2Breach/stargate.git" }

# Still need these for general Windows handling
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Networking_WinSock", # For the IP Decoder
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_LibraryLoader"  
] }


[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
